# survey-type-registry

./: .gitignore  README.md  codegen.py  pyproject.toml  survey-types.jsonld
.claude/: settings.json
.github/workflows/: ci.yml  site.yml
archived/: survey-types.archived.jsonld
docs/downstream-sync/: qwacback.md  survey2ddi.md  xlsform2lstsv.md
examples/: integer.xlsform.json  multiple_choice.xlsform.json  multiple_choice_other.xlsform.json  single_choice_long_list.xlsform.json  single_choice_other.xlsform.json
examples/grid/: ddi.xml  tsv.tsv  xlsform.json  xlsform.xlsx
examples/integer/: meta.json  xlsform.xlsx
examples/multiple_choice/: meta.json  xlsform.xlsx
examples/multiple_choice_long_list/: ddi.xml  meta.json  xlsform.xlsx
examples/multiple_choice_other/: ddi.xml  meta.json  xlsform.xlsx
examples/single_choice/: ddi.xml  meta.json  tsv.tsv  xlsform.json  xlsform.xlsx
examples/single_choice_long_list/: ddi.xml  meta.json  xlsform.xlsx
examples/single_choice_other/: ddi.xml  meta.json  tsv.tsv  xlsform.xlsx
examples/text/: xlsform.json  xlsform.xlsx
schemas/schematron/: ddi_custom_rules.sch
schemas/xsd/: README.md
scripts/: bless-snapshots.sh  build-worker.sh  check-drift.sh
site/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
site/src/: App.svelte  main.ts  styles.css
site/src/components/: ArchivedRow.svelte  CompositeCard.svelte  ConventionCard.svelte  TypeCard.svelte  VariantBlock.svelte
site/src/data/: registry.ts
tests/: README.md
tests/transformations/: _xlsform2lstsv_driver.mjs  drivers.py  fixtures.py  test_ddi_validation.py  test_registry_schematron_conformance.py  test_snapshots.py  test_xlsform_to_ddi.py  test_xlsform_to_lstsv.py
types/begin_group/: definition.jsonld  docs.md
types/begin_group/examples/grid/: meta.json  xlsform.xlsx
types/date/: definition.jsonld  docs.md
types/integer/: definition.jsonld  docs.md
types/integer/examples/integer/: ddi.xml  tsv.tsv  xlsform.xlsx
types/select_multiple/: definition.jsonld  docs.md
types/select_multiple/examples/multiple_choice/: ddi.xml  tsv.tsv  xlsform.xlsx
types/select_multiple/examples/multiple_choice_long_list/: ddi.xml  xlsform.json  xlsform.xlsx
types/select_multiple/examples/multiple_choice_other/: tsv.tsv  xlsform.xlsx
types/select_one/: definition.jsonld  docs.md
types/select_one/examples/single_choice/: xlsform.xlsx
types/select_one/examples/single_choice_long_list/: xlsform.xlsx
types/select_one/examples/single_choice_other/: xlsform.xlsx
types/text/: definition.jsonld  docs.md
types/text/examples/text/: ddi.xml  meta.json  tsv.tsv  xlsform.xlsx
workers/schematron-worker/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
workers/schematron-worker/src/test/resources/: invalid_duplicate_id.xml  invalid_labl_on_var.xml  invalid_missing_label.xml  invalid_no_categories.xml  invalid_vargrp_bad_type.xml  invalid_xsd_bad_element.xml  (+1 more)
(+8 files in other folders)
